--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
                 <p class="products-title">Ən Çox Satılanlar</p>     
             </div>
            <div class="cards">
-                <div class="card" data-aos="fade-right"data-aos-offset="30"data-aos-easing="ease-in-sine">
+                <div class="card" data-aos="fade-right">
                     <img src="./Images/linoleum.png" alt="">
                     <p class="card-text">Linoleum</p>
                 </div>
               
-              <div class="card" data-aos="fade-left"data-aos-offset="30"data-aos-easing="ease-in-sine">
+              <div class="card" data-aos="fade-left">
                 <img src="./Images/rezin doseme.png" alt="">
                 <p class="card-text">Rezin Döşəmə</p>
               </div>
@@ -174,10 +174,18 @@
                 <div class="footer-contact">
                     <p class="footer-contact-head">Əlaqə</p>
                     <div class="footer-contact-body">
-
+                        <a href="mailto:ortuk.az@gmail.com" class="footer-body">ortuk.az@gmail.com</a>
+                        <a href="tel:+994504122408" class="footer-body">+994504122408</a>
                     </div>
                 </div>
             </div>
+            <div class="copywriter">
+                <div class="container">
+                    <p class="writer"><i class="fa-regular fa-copyright"></i> Bütün Hüquqlar <a href="./index.html">örtük.az</a>-a
+                        məxsusdur</p>
+                </div>
+               
+              </div>
         </div>
     </footer>
 
