--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="./navbar.css">
+    <link rel="stylesheet" href="./index.css">
     <title>Örtük.az</title>
 </head>
 <body>
