--- a/products.html
+++ b/products.html
@@ -15,8 +15,8 @@
                 </div>
                 <div class="navbar-items">
                     <ul class="nav-items">
-                        <li class="nav-item"><a href="">Ana Səhifə</a> </li>
-                        <li class="nav-item"><a href="">Məhsullar </a> </li>
+                        <li class="nav-item"><a href="./index.html">Ana Səhifə</a> </li>
+                        <li class="nav-item"><a href="./products.html">Məhsullar </a> </li>
                         <li class="nav-item"><a href="">Xidmətlər </a> </li>
                         <li class="nav-item"><a href="">Haqqımızda</a> </li>
                     </ul>
@@ -38,8 +38,8 @@
                 <div class="footer-page">
                     <p class="footer-nav-head">Səhifələr</p>
                     <ul class="footer-navs">
-                        <li class="footer-nav"><a href="">Əsas Səhifə</a></li>
-                        <li class="footer-nav"><a href="">Məhsullar</a></li>
+                        <li class="footer-nav"><a href="./index.html">Əsas Səhifə</a></li>
+                        <li class="footer-nav"><a href="./products.html">Məhsullar</a></li>
                         <li class="footer-nav"><a href="">Xidmətlər</a></li>
                         <li class="footer-nav"><a href="">Haqqımızda</a></li>
                     </ul>
