--- a/products.html
+++ b/products.html
@@ -27,9 +27,14 @@
         </div>
     </header>
 
+    <div class="allproducts">
+        <div class="container">
+            <p class="allproducts-head">Məhsullar</p>
+        </div>
+    </div>
 
 
-    <footer>
+    <!-- <footer>
         <div class="container">
             <div class="footer">
                 <div class="footer-logo">
@@ -86,6 +91,6 @@
                
               </div>
         </div>
-    </footer>
+    </footer> -->
 </body>
 </html>
