--- a/products.html
+++ b/products.html
@@ -27,11 +27,11 @@
         </div>
     </header>
 
-    <div class="allproducts">
+    <!-- <div class="allproducts">
         <div class="container">
             <p class="allproducts-head">Məhsullar</p>
         </div>
-    </div>
+    </div> -->
 
 
     <!-- <footer>
