mehsullar sehifesi elave edildi

--- a/products.html
+++ b/products.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./products.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="products.css">
     <title>Örtük.az</title>
 </head>
 <body>
@@ -21,20 +25,79 @@
                         <li class="nav-item"><a href="">Haqqımızda</a> </li>
                     </ul>
                 </div>
-                
             </div>
 
         </div>
     </header>
 
-    <div class="allproducts">
+    <div class="products-menu">
         <div class="container">
-            <p class="allproducts-head">Məhsullar</p>
+            <div class="product-head">
+                <p class="product-head-text">Məhsullar</p>
+            </div>
+            <div class="product-groups">
+                <div class="cavrolit-group">
+                    <p class="cav-group-head">Kavrolit</p>
+                    <div class="cavrolite-imgs">
+                        <div class="cav-group1"></div>
+                        <div class="cav-group1"></div>
+                        <div class="cav-group1"></div>
+                        <div class="cav-group1"></div>
+                        <div class="cav-group1"></div>
+                        <div class="cav-group1"></div>
+                    </div>
+                </div>
+                <div class="suni-qazon-group">
+                    <p class="suni-qazon-group-head">Suni Qazon</p>
+                    <div class="suni-qazon-imgs">
+                        <div class="sq-group1"></div>
+                        <div class="sq-group1"></div>
+                        <div class="sq-group1"></div>
+                        <div class="sq-group1"></div>
+                        <div class="sq-group1"></div>
+                        <div class="sq-group1"></div>
+                    </div>
+                </div>
+                <div class="linoleum-group">
+                    <p class="lin-group-head">Linoleum</p>
+                    <div class="lin-imgs">
+                        <div class="lin-group1"></div>
+                        <div class="lin-group1"></div>
+                        <div class="lin-group1"></div>
+                        <div class="lin-group1"></div>
+                        <div class="lin-group1"></div>
+                        <div class="lin-group1"></div>
+                    </div>
+                </div>
+                <div class="rezin-paspas-group">
+                    <p class="rp-group-head">Rezin Paspas</p>
+                    <div class="rp-imgs">
+                        <div class="rp-group1"></div>
+                        <div class="rp-group1"></div>
+                        <div class="rp-group1"></div>
+                    </div>
+                </div>
+                <div class="rezin-doseme-group">
+                    <p class="rd-group-head">Rezin Döşəmə</p>
+                    <div class="rd-imgs">
+                        <div class="rd-group1"></div>
+                        <div class="rd-group1"></div>
+                        <div class="rd-group1"></div>
+                    </div>
+                </div>
+                <div class="tatami-group">
+                    <p class="tt-group-head">Tatami</p>
+                    <div class="tt-imgs">
+                        <div class="tt-group1"></div>
+                        <div class="tt-group1"></div>
+                        <div class="tt-group1"></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
-
-    <!-- <footer>
+    <footer>
         <div class="container">
             <div class="footer">
                 <div class="footer-logo">
@@ -91,6 +154,12 @@
                
               </div>
         </div>
-    </footer> -->
+    </footer>
+
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
