--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
                         <li class="nav-item"><a href="./index.html">Ana Səhifə</a> </li>
                         <li class="nav-item"><a href="./products.html">Məhsullar </a> </li>
                         <li class="nav-item"><a href="">Xidmətlər </a> </li>
-                        <li class="nav-item"><a href="./about.html">Haqqımızda</a> </li>
+                        <li class="nav-item"><a href="">Haqqımızda</a> </li>
                     </ul>
                 </div>
             </div>
@@ -30,74 +30,20 @@
         </div>
     </header>
 
-    <div class="products-menu">
+    <div class="about-menu">
         <div class="container">
-            <div class="product-head">
-                <p class="product-head-text">Məhsullar</p>
+            <div class="about-head">
+                <p class="about-head-text">Haqqımızda</p>
             </div>
-            <div class="product-groups">
-                <div class="cavrolit-group">
-                    <p class="cav-group-head">Kavrolit</p>
-                    <div class="cavrolite-imgs">
-                        <div class="cav-group1"></div>
-                        <div class="cav-group1"></div>
-                        <div class="cav-group1"></div>
-                        <div class="cav-group1"></div>
-                        <div class="cav-group1"></div>
-                        <div class="cav-group1"></div>
-                    </div>
-                </div>
-                <div class="suni-qazon-group">
-                    <p class="suni-qazon-group-head">Suni Qazon</p>
-                    <div class="suni-qazon-imgs">
-                        <div class="sq-group1"></div>
-                        <div class="sq-group1"></div>
-                        <div class="sq-group1"></div>
-                        <div class="sq-group1"></div>
-                        <div class="sq-group1"></div>
-                        <div class="sq-group1"></div>
-                    </div>
-                </div>
-                <div class="linoleum-group">
-                    <p class="lin-group-head">Linoleum</p>
-                    <div class="lin-imgs">
-                        <div class="lin-group1"></div>
-                        <div class="lin-group1"></div>
-                        <div class="lin-group1"></div>
-                        <div class="lin-group1"></div>
-                        <div class="lin-group1"></div>
-                        <div class="lin-group1"></div>
-                    </div>
-                </div>
-                <div class="rezin-paspas-group">
-                    <p class="rp-group-head">Rezin Paspas</p>
-                    <div class="rp-imgs">
-                        <div class="rp-group1"></div>
-                        <div class="rp-group1"></div>
-                        <div class="rp-group1"></div>
-                    </div>
-                </div>
-                <div class="rezin-doseme-group">
-                    <p class="rd-group-head">Rezin Döşəmə</p>
-                    <div class="rd-imgs">
-                        <div class="rd-group1"></div>
-                        <div class="rd-group1"></div>
-                        <div class="rd-group1"></div>
-                    </div>
-                </div>
-                <div class="tatami-group">
-                    <p class="tt-group-head">Tatami</p>
-                    <div class="tt-imgs">
-                        <div class="tt-group1"></div>
-                        <div class="tt-group1"></div>
-                        <div class="tt-group1"></div>
-                    </div>
-                </div>
+            <div class="about-groups">
+                <div class="about-logo"></div>
+                <div class="about-text"></div>
+              
             </div>
         </div>
     </div>
 
-    <footer>
+    <!-- <footer>
         <div class="container">
             <div class="footer">
                 <div class="footer-logo">
@@ -154,7 +100,7 @@
                
               </div>
         </div>
-    </footer>
+    </footer> -->
 
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
