--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <li class="nav-item"><a href="index.html">Ana Səhifə</a> </li>
                         <li class="nav-item"><a href="./products.html">Məhsullar </a> </li>
                         <li class="nav-item"><a href="">Xidmətlər </a> </li>
-                        <li class="nav-item"><a href="">Haqqımızda</a> </li>
+                        <li class="nav-item"><a href="./about.html">Haqqımızda</a> </li>
                     </ul>
                 </div>
                 
