--- a/products.html
+++ b/products.html
@@ -109,7 +109,7 @@
                         <li class="footer-nav"><a href="./index.html">Əsas Səhifə</a></li>
                         <li class="footer-nav"><a href="./products.html">Məhsullar</a></li>
                         <li class="footer-nav"><a href="">Xidmətlər</a></li>
-                        <li class="footer-nav"><a href="">Haqqımızda</a></li>
+                        <li class="footer-nav"><a href="./about.html">Haqqımızda</a></li>
                     </ul>
                 </div>
                 <div class="footer-address">
