--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="products.css">
+    <link rel="stylesheet" href="./about.css">
     <title>Örtük.az</title>
 </head>
 <body>
@@ -36,14 +36,18 @@
                 <p class="about-head-text">Haqqımızda</p>
             </div>
             <div class="about-groups">
-                <div class="about-logo"></div>
-                <div class="about-text"></div>
+                <div class="about-logo">
+                    <img src="./Images/ortuk-az-1.jpg" alt="">
+                </div>
+                <div class="about-text">
+                    <p>10 ildən çoxdur ki fəaliyyətdə olan <a href="./index.html">örtük.az</a> özünü daima doğrultmuş  və müştərilərin rəğbətini qazanmışdır. Rusiya,Türkiyə və Avropa istehsalı olan, yüksək keyfiyyətə malik olan məhsulların satışı və quraşdırılması ilə məşğuldur.</p>
+                </div>
               
             </div>
         </div>
     </div>
 
-    <!-- <footer>
+    <footer>
         <div class="container">
             <div class="footer">
                 <div class="footer-logo">
@@ -55,7 +59,7 @@
                         <li class="footer-nav"><a href="./index.html">Əsas Səhifə</a></li>
                         <li class="footer-nav"><a href="./products.html">Məhsullar</a></li>
                         <li class="footer-nav"><a href="">Xidmətlər</a></li>
-                        <li class="footer-nav"><a href="">Haqqımızda</a></li>
+                        <li class="footer-nav"><a href="./about.html">Haqqımızda</a></li>
                     </ul>
                 </div>
                 <div class="footer-address">
@@ -100,7 +104,7 @@
                
               </div>
         </div>
-    </footer> -->
+    </footer>
 
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
