services menyu elave edildi

--- a/services.html
+++ b/services.html
@@ -7,8 +7,8 @@
     integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="products.css">
-    <title>Örtük.az - Bütün Məhsullar</title>
+    <link rel="stylesheet" href="./services.css">
+    <title>Örtük.az - Xidmətlərimiz seçilməyimizdir!</title>
     <link rel="icon" href="./images/ortuk-az-1.jpg" type="image/icon type">
 </head>
 <body>
@@ -20,78 +20,49 @@
                 </div>
                 <div class="navbar-items">
                     <ul class="nav-items">
-                        <li class="nav-item"><a href="./index.html">Əsas Səhifə</a> </li>
+                        <li class="nav-item"><a href="index.html">Əsas Səhifə</a> </li>
                         <li class="nav-item"><a href="./products.html">Məhsullar </a> </li>
                         <li class="nav-item"><a href="./services.html">Xidmətlər </a> </li>
                         <li class="nav-item"><a href="./about.html">Haqqımızda</a> </li>
                     </ul>
                 </div>
             </div>
-
         </div>
     </header>
-
-    <div class="products-menu">
+    <div class="services">
         <div class="container">
-            <div class="product-head">
-                <p class="product-head-text">Məhsullar</p>
+            <div class="service-head">
+                <p class="sv-head-txt">Xidmətlər</p>
             </div>
-            <div class="product-groups">
-                <div class="cavrolit-group">
-                    <p class="cav-group-head">Kavrolit</p>
-                    <div class="cavrolite-imgs">
-                        <div class="cav-group1"></div>
-                        <div class="cav-group1"></div>
-                        <div class="cav-group1"></div>
-                        <div class="cav-group1"></div>
-                        <div class="cav-group1"></div>
-                        <div class="cav-group1"></div>
-                    </div>
+            <div class="service-body">
+                <div class="service-img">
+                    <img src="./Images/ortuk-az-1.jpg" alt="">
                 </div>
-                <div class="suni-qazon-group">
-                    <p class="suni-qazon-group-head">Suni Qazon</p>
-                    <div class="suni-qazon-imgs">
-                        <div class="sq-group1"></div>
-                        <div class="sq-group1"></div>
-                        <div class="sq-group1"></div>
-                        <div class="sq-group1"></div>
-                        <div class="sq-group1"></div>
-                        <div class="sq-group1"></div>
+                <div class="service-texts">
+                    <div class="service1">
+                        <div class="service1-head">
+                            <p class="sv1-txt">Çatdırılma</p>
+                        </div>
+                        <div class="service1-body">
+                            <p>Bakı, Abşeron, Sumqayıt və bölgələrə çatdırılma mövcuddur.</p>
+                        </div>
                     </div>
-                </div>
-                <div class="linoleum-group">
-                    <p class="lin-group-head">Linoleum</p>
-                    <div class="lin-imgs">
-                        <div class="lin-group1"></div>
-                        <div class="lin-group1"></div>
-                        <div class="lin-group1"></div>
-                        <div class="lin-group1"></div>
-                        <div class="lin-group1"></div>
-                        <div class="lin-group1"></div>
+                    <div class="service2">
+                        <div class="service2-head">
+                            <p class="sv1-txt">Quraşdırma</p>
+                        </div>
+                        <div class="service2-body">
+                            <p>Sahənin mütəxəssisləri tərəfindən istənilən vaxtda müəyyən ünvana quraşdırılması </p>
+                        </div>
                     </div>
-                </div>
-                <div class="rezin-paspas-group">
-                    <p class="rp-group-head">Rezin Paspas</p>
-                    <div class="rp-imgs">
-                        <div class="rp-group1"></div>
-                        <div class="rp-group1"></div>
-                        <div class="rp-group1"></div>
-                    </div>
-                </div>
-                <div class="rezin-doseme-group">
-                    <p class="rd-group-head">Rezin Döşəmə</p>
-                    <div class="rd-imgs">
-                        <div class="rd-group1"></div>
-                        <div class="rd-group1"></div>
-                        <div class="rd-group1"></div>
-                    </div>
-                </div>
-                <div class="tatami-group">
-                    <p class="tt-group-head">Tatami</p>
-                    <div class="tt-imgs">
-                        <div class="tt-group1"></div>
-                        <div class="tt-group1"></div>
-                        <div class="tt-group1"></div>
+                    <div class="service3">
+                        <div class="service3-head">
+                            <p class="sv1-txt">İş Saatları</p>
+                        </div>
+                        <div class="service3-body">
+                            <p>Bazar ertəsi - Bazar 
+                                08:00 - 18:00</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -156,11 +127,4 @@
               </div>
         </div>
     </footer>
-
-
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
 </body>
-</html>
