--- a/about.html
+++ b/about.html
@@ -8,7 +8,8 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./about.css">
-    <title>Örtük.az</title>
+    <title>Örtük.az - Bizim Haqqımızda</title>
+    <link rel="icon" href="./images/ortuk-az-1.jpg" type="image/icon type">
 </head>
 <body>
     <header>
@@ -19,10 +20,10 @@
                 </div>
                 <div class="navbar-items">
                     <ul class="nav-items">
-                        <li class="nav-item"><a href="./index.html">Ana Səhifə</a> </li>
+                        <li class="nav-item"><a href="./index.html">Əsas Səhifə</a> </li>
                         <li class="nav-item"><a href="./products.html">Məhsullar </a> </li>
-                        <li class="nav-item"><a href="">Xidmətlər </a> </li>
-                        <li class="nav-item"><a href="">Haqqımızda</a> </li>
+                        <li class="nav-item"><a href="./services.html">Xidmətlər </a> </li>
+                        <li class="nav-item"><a href="./about.html">Haqqımızda</a> </li>
                     </ul>
                 </div>
             </div>
@@ -58,7 +59,7 @@
                     <ul class="footer-navs">
                         <li class="footer-nav"><a href="./index.html">Əsas Səhifə</a></li>
                         <li class="footer-nav"><a href="./products.html">Məhsullar</a></li>
-                        <li class="footer-nav"><a href="">Xidmətlər</a></li>
+                        <li class="footer-nav"><a href="./services.html">Xidmətlər</a></li>
                         <li class="footer-nav"><a href="./about.html">Haqqımızda</a></li>
                     </ul>
                 </div>
